# oit_stage_simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  get_ros_distoro.sh  install_launchers.sh  package.xml  python_cleanup.sh
config/: amcl.yaml  joy.yaml  laser_filter.yaml  slam_toolbox_offline.yaml  slam_toolbox_online.yaml  slam_toolbox_online_sync.yaml
config/nav2/: NOTICE  behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  planner_server.yaml  smoother_server.yaml  velocity_smoother.yaml  waypoint_follower.yaml
desktop_templates/: oit_stage_navigation  oit_stop_all
launch/: amcl.launch.py  mapping.launch.py  navigation.launch.py  navigation_common.launch.py  play_rosbag.launch.py  rviz.launch.py  stage.launch.py  stage_mapping.launch.py  stage_navigation.launch.py  stage_teleop.launch.py  teleop_select.launch.py
maps/: HRC.pgm  HRC.world  HRC.yaml  add_map_image_border.py  make_stage_world.py  make_stage_world.sh  world.template
maps/00000000_000000_sample/: 00000000_000000_sample.pgm  00000000_000000_sample.world  00000000_000000_sample.yaml
maps/stage/: device.inc  map.inc
oit_stage_simulator/: launch_utils.py
rviz/: mapping.rviz  navigation.rviz  simple.rviz
scripts/: get_pose_amcl.py  get_pose_tf.sh  select_map.py  stage_navigation.sh  stop_all.sh
